--- a/helm/example.yaml
+++ b/helm/example.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/abu-raed/argo
     targetRevision: main
     path: path/to/chart
     ###
